sjengida/c2/King
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/King/src/neval.c:709:10: error: use of undeclared identifier 'dword_66759C'
v4 = ( ( dword_66759C[sq] + 1) & 0xFFFFFFFE ^ 8 | c ^ ( dword_66759C[sq] + 1) & 1) == 0; 
         ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/King/src/neval.c:709:57: error: use of undeclared identifier 'dword_66759C'
v4 = ( ( dword_66759C[sq] + 1) & 0xFFFFFFFE ^ 8 | c ^ ( dword_66759C[sq] + 1) & 1) == 0; 
                                                        ^
2 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/King/src/obj/neval.o] Error 1
